--- a/team1-visualization/df_to_json.ipynb
+++ b/team1-visualization/df_to_json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +279,7 @@
        "16                           0.054042                                0.034822  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -317,11 +317,11 @@
        "      <th></th>\n",
        "      <th>year</th>\n",
        "      <th>DCED</th>\n",
-       "      <th>UNDP-Private-Sector-Strategy-2007</th>\n",
-       "      <th>UNDP-Private-Sector-Strategy-2012</th>\n",
-       "      <th>UNDP-Private-Sector-Strategy-2016</th>\n",
-       "      <th>UNDP-Private-Sector-Strategy-2018</th>\n",
-       "      <th>UNDP-Private-Sector-Strategy-2018-2022</th>\n",
+       "      <th>UNDP_Private_Sector_Strategy_2007</th>\n",
+       "      <th>UNDP_Private_Sector_Strategy_2012</th>\n",
+       "      <th>UNDP_Private_Sector_Strategy_2016</th>\n",
+       "      <th>UNDP_Private_Sector_Strategy_2018</th>\n",
+       "      <th>UNDP_Private_Sector_Strategy_2018_2022</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -480,7 +480,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    year      DCED  UNDP-Private-Sector-Strategy-2007  \\\n",
+       "    year      DCED  UNDP_Private_Sector_Strategy_2007  \\\n",
        "2   2007  0.020292                           0.036193   \n",
        "3   2008  0.022420                           0.041662   \n",
        "4   2009  0.023774                           0.035209   \n",
@@ -497,7 +497,7 @@
        "15  2020  0.030294                           0.028046   \n",
        "16  2021  0.031310                           0.030822   \n",
        "\n",
-       "    UNDP-Private-Sector-Strategy-2012  UNDP-Private-Sector-Strategy-2016  \\\n",
+       "    UNDP_Private_Sector_Strategy_2012  UNDP_Private_Sector_Strategy_2016  \\\n",
        "2                            0.031417                           0.000671   \n",
        "3                            0.032987                           0.000473   \n",
        "4                            0.032106                           0.001962   \n",
@@ -514,7 +514,7 @@
        "15                           0.038740                           0.002348   \n",
        "16                           0.037063                           0.002136   \n",
        "\n",
-       "    UNDP-Private-Sector-Strategy-2018  UNDP-Private-Sector-Strategy-2018-2022  \n",
+       "    UNDP_Private_Sector_Strategy_2018  UNDP_Private_Sector_Strategy_2018_2022  \n",
        "2                            0.035087                                0.022121  \n",
        "3                            0.040126                                0.024602  \n",
        "4                            0.039112                                0.024267  \n",
@@ -532,19 +532,20 @@
        "16                           0.054042                                0.034822  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_dced_private = df_dced_private.drop(labels=[0,1], axis=0)\n",
+    "df_dced_private = df_dced_private.rename(columns={'UNDP-Private-Sector-Strategy-2007': 'UNDP_Private_Sector_Strategy_2007', 'UNDP-Private-Sector-Strategy-2012': 'UNDP_Private_Sector_Strategy_2012', 'UNDP-Private-Sector-Strategy-2016': 'UNDP_Private_Sector_Strategy_2016', 'UNDP-Private-Sector-Strategy-2018': 'UNDP_Private_Sector_Strategy_2018', 'UNDP-Private-Sector-Strategy-2018-2022': 'UNDP_Private_Sector_Strategy_2018_2022'})\n",
     "df_dced_private"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,137 +563,137 @@
     "  {\n",
     "    \"year\": 2007,\n",
     "    \"DCED\": 0.020291951,\n",
-    "    \"UNDP-Private-Sector-Strategy-2007\": 0.0361934446,\n",
-    "    \"UNDP-Private-Sector-Strategy-2012\": 0.0314169125,\n",
-    "    \"UNDP-Private-Sector-Strategy-2016\": 0.0006714684,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018\": 0.0350867082,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018-2022\": 0.0221212199\n",
+    "    \"UNDP_Private_Sector_Strategy_2007\": 0.0361934446,\n",
+    "    \"UNDP_Private_Sector_Strategy_2012\": 0.0314169125,\n",
+    "    \"UNDP_Private_Sector_Strategy_2016\": 0.0006714684,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018\": 0.0350867082,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018_2022\": 0.0221212199\n",
     "  },\n",
     "  {\n",
     "    \"year\": 2008,\n",
     "    \"DCED\": 0.022419527,\n",
-    "    \"UNDP-Private-Sector-Strategy-2007\": 0.0416624941,\n",
-    "    \"UNDP-Private-Sector-Strategy-2012\": 0.0329868813,\n",
-    "    \"UNDP-Private-Sector-Strategy-2016\": 0.0004725325,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018\": 0.0401262674,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018-2022\": 0.0246019848\n",
+    "    \"UNDP_Private_Sector_Strategy_2007\": 0.0416624941,\n",
+    "    \"UNDP_Private_Sector_Strategy_2012\": 0.0329868813,\n",
+    "    \"UNDP_Private_Sector_Strategy_2016\": 0.0004725325,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018\": 0.0401262674,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018_2022\": 0.0246019848\n",
     "  },\n",
     "  {\n",
     "    \"year\": 2009,\n",
     "    \"DCED\": 0.0237735138,\n",
-    "    \"UNDP-Private-Sector-Strategy-2007\": 0.0352088052,\n",
-    "    \"UNDP-Private-Sector-Strategy-2012\": 0.0321056716,\n",
-    "    \"UNDP-Private-Sector-Strategy-2016\": 0.0019624646,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018\": 0.0391119149,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018-2022\": 0.0242665109\n",
+    "    \"UNDP_Private_Sector_Strategy_2007\": 0.0352088052,\n",
+    "    \"UNDP_Private_Sector_Strategy_2012\": 0.0321056716,\n",
+    "    \"UNDP_Private_Sector_Strategy_2016\": 0.0019624646,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018\": 0.0391119149,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018_2022\": 0.0242665109\n",
     "  },\n",
     "  {\n",
     "    \"year\": 2010,\n",
     "    \"DCED\": 0.0238007571,\n",
-    "    \"UNDP-Private-Sector-Strategy-2007\": 0.037147467,\n",
-    "    \"UNDP-Private-Sector-Strategy-2012\": 0.0324884883,\n",
-    "    \"UNDP-Private-Sector-Strategy-2016\": 0.0008416573,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018\": 0.0399596994,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018-2022\": 0.0239247314\n",
+    "    \"UNDP_Private_Sector_Strategy_2007\": 0.037147467,\n",
+    "    \"UNDP_Private_Sector_Strategy_2012\": 0.0324884883,\n",
+    "    \"UNDP_Private_Sector_Strategy_2016\": 0.0008416573,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018\": 0.0399596994,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018_2022\": 0.0239247314\n",
     "  },\n",
     "  {\n",
     "    \"year\": 2011,\n",
     "    \"DCED\": 0.0231831599,\n",
-    "    \"UNDP-Private-Sector-Strategy-2007\": 0.0363701122,\n",
-    "    \"UNDP-Private-Sector-Strategy-2012\": 0.0324208841,\n",
-    "    \"UNDP-Private-Sector-Strategy-2016\": 0.0010064769,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018\": 0.0422763746,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018-2022\": 0.0253848753\n",
+    "    \"UNDP_Private_Sector_Strategy_2007\": 0.0363701122,\n",
+    "    \"UNDP_Private_Sector_Strategy_2012\": 0.0324208841,\n",
+    "    \"UNDP_Private_Sector_Strategy_2016\": 0.0010064769,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018\": 0.0422763746,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018_2022\": 0.0253848753\n",
     "  },\n",
     "  {\n",
     "    \"year\": 2012,\n",
     "    \"DCED\": 0.023650112,\n",
-    "    \"UNDP-Private-Sector-Strategy-2007\": 0.0342823922,\n",
-    "    \"UNDP-Private-Sector-Strategy-2012\": 0.0321699101,\n",
-    "    \"UNDP-Private-Sector-Strategy-2016\": 0.0012656741,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018\": 0.0412159356,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018-2022\": 0.0251234786\n",
+    "    \"UNDP_Private_Sector_Strategy_2007\": 0.0342823922,\n",
+    "    \"UNDP_Private_Sector_Strategy_2012\": 0.0321699101,\n",
+    "    \"UNDP_Private_Sector_Strategy_2016\": 0.0012656741,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018\": 0.0412159356,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018_2022\": 0.0251234786\n",
     "  },\n",
     "  {\n",
     "    \"year\": 2013,\n",
     "    \"DCED\": 0.0250250211,\n",
-    "    \"UNDP-Private-Sector-Strategy-2007\": 0.0346085964,\n",
-    "    \"UNDP-Private-Sector-Strategy-2012\": 0.0329898914,\n",
-    "    \"UNDP-Private-Sector-Strategy-2016\": 0.0009485515,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018\": 0.0419427593,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018-2022\": 0.0254680778\n",
+    "    \"UNDP_Private_Sector_Strategy_2007\": 0.0346085964,\n",
+    "    \"UNDP_Private_Sector_Strategy_2012\": 0.0329898914,\n",
+    "    \"UNDP_Private_Sector_Strategy_2016\": 0.0009485515,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018\": 0.0419427593,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018_2022\": 0.0254680778\n",
     "  },\n",
     "  {\n",
     "    \"year\": 2014,\n",
     "    \"DCED\": 0.0255694233,\n",
-    "    \"UNDP-Private-Sector-Strategy-2007\": 0.031896028,\n",
-    "    \"UNDP-Private-Sector-Strategy-2012\": 0.0311893811,\n",
-    "    \"UNDP-Private-Sector-Strategy-2016\": 0.0015004914,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018\": 0.0423540989,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018-2022\": 0.0251941554\n",
+    "    \"UNDP_Private_Sector_Strategy_2007\": 0.031896028,\n",
+    "    \"UNDP_Private_Sector_Strategy_2012\": 0.0311893811,\n",
+    "    \"UNDP_Private_Sector_Strategy_2016\": 0.0015004914,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018\": 0.0423540989,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018_2022\": 0.0251941554\n",
     "  },\n",
     "  {\n",
     "    \"year\": 2015,\n",
     "    \"DCED\": 0.0258569295,\n",
-    "    \"UNDP-Private-Sector-Strategy-2007\": 0.0304321291,\n",
-    "    \"UNDP-Private-Sector-Strategy-2012\": 0.0322096777,\n",
-    "    \"UNDP-Private-Sector-Strategy-2016\": 0.0019243729,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018\": 0.0437096514,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018-2022\": 0.0269645161\n",
+    "    \"UNDP_Private_Sector_Strategy_2007\": 0.0304321291,\n",
+    "    \"UNDP_Private_Sector_Strategy_2012\": 0.0322096777,\n",
+    "    \"UNDP_Private_Sector_Strategy_2016\": 0.0019243729,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018\": 0.0437096514,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018_2022\": 0.0269645161\n",
     "  },\n",
     "  {\n",
     "    \"year\": 2016,\n",
     "    \"DCED\": 0.0257385951,\n",
-    "    \"UNDP-Private-Sector-Strategy-2007\": 0.0283150894,\n",
-    "    \"UNDP-Private-Sector-Strategy-2012\": 0.0331813971,\n",
-    "    \"UNDP-Private-Sector-Strategy-2016\": 0.0018711434,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018\": 0.0459398953,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018-2022\": 0.0283019923\n",
+    "    \"UNDP_Private_Sector_Strategy_2007\": 0.0283150894,\n",
+    "    \"UNDP_Private_Sector_Strategy_2012\": 0.0331813971,\n",
+    "    \"UNDP_Private_Sector_Strategy_2016\": 0.0018711434,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018\": 0.0459398953,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018_2022\": 0.0283019923\n",
     "  },\n",
     "  {\n",
     "    \"year\": 2017,\n",
     "    \"DCED\": 0.0273287336,\n",
-    "    \"UNDP-Private-Sector-Strategy-2007\": 0.0285936739,\n",
-    "    \"UNDP-Private-Sector-Strategy-2012\": 0.0345854378,\n",
-    "    \"UNDP-Private-Sector-Strategy-2016\": 0.0024717865,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018\": 0.0489208225,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018-2022\": 0.0302585411\n",
+    "    \"UNDP_Private_Sector_Strategy_2007\": 0.0285936739,\n",
+    "    \"UNDP_Private_Sector_Strategy_2012\": 0.0345854378,\n",
+    "    \"UNDP_Private_Sector_Strategy_2016\": 0.0024717865,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018\": 0.0489208225,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018_2022\": 0.0302585411\n",
     "  },\n",
     "  {\n",
     "    \"year\": 2018,\n",
     "    \"DCED\": 0.029152143,\n",
-    "    \"UNDP-Private-Sector-Strategy-2007\": 0.0272947641,\n",
-    "    \"UNDP-Private-Sector-Strategy-2012\": 0.0366151984,\n",
-    "    \"UNDP-Private-Sector-Strategy-2016\": 0.0028014159,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018\": 0.0528508123,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018-2022\": 0.0329337998\n",
+    "    \"UNDP_Private_Sector_Strategy_2007\": 0.0272947641,\n",
+    "    \"UNDP_Private_Sector_Strategy_2012\": 0.0366151984,\n",
+    "    \"UNDP_Private_Sector_Strategy_2016\": 0.0028014159,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018\": 0.0528508123,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018_2022\": 0.0329337998\n",
     "  },\n",
     "  {\n",
     "    \"year\": 2019,\n",
     "    \"DCED\": 0.0288776696,\n",
-    "    \"UNDP-Private-Sector-Strategy-2007\": 0.0286180593,\n",
-    "    \"UNDP-Private-Sector-Strategy-2012\": 0.0384871664,\n",
-    "    \"UNDP-Private-Sector-Strategy-2016\": 0.0024549477,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018\": 0.0552202705,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018-2022\": 0.0347893662\n",
+    "    \"UNDP_Private_Sector_Strategy_2007\": 0.0286180593,\n",
+    "    \"UNDP_Private_Sector_Strategy_2012\": 0.0384871664,\n",
+    "    \"UNDP_Private_Sector_Strategy_2016\": 0.0024549477,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018\": 0.0552202705,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018_2022\": 0.0347893662\n",
     "  },\n",
     "  {\n",
     "    \"year\": 2020,\n",
     "    \"DCED\": 0.0302939846,\n",
-    "    \"UNDP-Private-Sector-Strategy-2007\": 0.0280460855,\n",
-    "    \"UNDP-Private-Sector-Strategy-2012\": 0.0387403486,\n",
-    "    \"UNDP-Private-Sector-Strategy-2016\": 0.0023483863,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018\": 0.0563184778,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018-2022\": 0.0358705131\n",
+    "    \"UNDP_Private_Sector_Strategy_2007\": 0.0280460855,\n",
+    "    \"UNDP_Private_Sector_Strategy_2012\": 0.0387403486,\n",
+    "    \"UNDP_Private_Sector_Strategy_2016\": 0.0023483863,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018\": 0.0563184778,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018_2022\": 0.0358705131\n",
     "  },\n",
     "  {\n",
     "    \"year\": 2021,\n",
     "    \"DCED\": 0.0313098488,\n",
-    "    \"UNDP-Private-Sector-Strategy-2007\": 0.0308223976,\n",
-    "    \"UNDP-Private-Sector-Strategy-2012\": 0.0370627459,\n",
-    "    \"UNDP-Private-Sector-Strategy-2016\": 0.0021356228,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018\": 0.0540418456,\n",
-    "    \"UNDP-Private-Sector-Strategy-2018-2022\": 0.0348219597\n",
+    "    \"UNDP_Private_Sector_Strategy_2007\": 0.0308223976,\n",
+    "    \"UNDP_Private_Sector_Strategy_2012\": 0.0370627459,\n",
+    "    \"UNDP_Private_Sector_Strategy_2016\": 0.0021356228,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018\": 0.0540418456,\n",
+    "    \"UNDP_Private_Sector_Strategy_2018_2022\": 0.0348219597\n",
     "  }\n",
     "]"
    ]
